bpo-46430: Intern strings in deep-frozen modules  (GH-30683)